# Labs-2-sem

./: .gitignore
Lab1OP/: CMakeLists.txt  constants.h  entryPoint.cpp  entryPoint.h  main.cpp
Lab1OP/logic/: appContext.h  appParams.h  logic.cpp  logic.h
Lab1OP/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
LabOp2/: CMakeLists.txt
LabOp2/entryPoint/: entryPoint.cpp  entryPoint.h
LabOp2/logic/: AppContext.h  Iterator.cpp  LinkedList.cpp  LinkedList.h  calculateMetric.cpp  calculateMetric.h  constants.h  cvsParsing.cpp  cvsParsing.h  initialization.cpp  initialization.h  loadData.cpp  loadData.h  sort.cpp  stringMemory.cpp  stringMemory.h
LabOp2/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
LabOp3/: CMakeLists.txt
LabOp3/entryPoint/: entryPoint.cpp  entryPoint.h
LabOp3/logic/: Iterator.h  LinkedList.cpp  LinkedList.h  appContext.cpp  appContext.h  appParams.h  arrayUtils.cpp  arrayUtils.h  calculateMetric.cpp  calculateMetric.h  cvsParsing.cpp  cvsParsing.h  loadData.cpp  loadData.h  logicConstants.h  sort.h  stringMemory.h
LabOp3/ui/: graphConstants.h  graphWindow.cpp  graphWindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1OOP/: circle.cpp  circle.h  circleFactory.cpp  circleFactory.h  commands.cpp  commands.h  constants.h  input.cpp  input.h  lab1OOP.pro  main.cpp  menu.cpp  menu.h  menuCommands.h  rectangle.cpp  rectangle.h  rectangleFactory.cpp  rectanglefactory.h  shape.h  shapeFactory.h  shapeVisitor.h  triangle.cpp  triangle.h  triangleFactory.cpp  triangleFactory.h  visitors.cpp  visitors.h
lab4_op/: CMakeLists.txt  entryPoint.cpp  entryPoint.h
lab4_op/logic/: appContext.h  contextManager.cpp  contextManager.h  csvParsing.cpp  csvParsing.h  errorHandler.cpp  errorHandler.h  main.cpp  matrixUtils.cpp  matrixUtils.h  normalizer.cpp  normalizer.h  statusCode.h  stringUtils.cpp  stringUtils.h  transform.cpp  transform.h
lab4_op/ui/: mainWindow.h  mainWindow.ui  mainwindow.cpp  surfaceWidget.cpp  surfaceWidget.h
labOOP2/: CMakeLists.txt  iterator.h  iterator.tpp  main.cpp  myset.h  myset.tpp  node.h  node.tpp  testset.cpp  testset.h
labOOP_3/labOOP_3/: CMakeLists.txt  main.cpp
labOOP_3/labOOP_3/businessLogic/: calculatorFacade.cpp  calculatorFacade.h  constantsLogic.h  evalContext.cpp  evalContext.h  evaluator.cpp  evaluator.h  tokenizer.cpp  tokenizer.h
labOOP_3/labOOP_3/businessLogic/Operation/: addOperator.cpp  addOperator.h  divideOperator.cpp  divideOperator.h  multiplyOperator.cpp  multiplyOperator.h  operator.h  operatorFactory.cpp  operatorFactory.h  subtractOperator.cpp  subtractOperator.h
labOOP_3/labOOP_3/businessLogic/commands/: clearCommand.cpp  clearCommand.h  deleteCommand.cpp  deleteCommand.h  inputCommand.cpp  inputCommand.h  сommand.h
labOOP_3/labOOP_3/businessLogic/token/: binaryOperatorToken.cpp  binaryOperatorToken.h  leftParenToken.cpp  leftParenToken.h  numberToken.cpp  numberToken.h  operatorToken.cpp  operatorToken.h  rightParenToken.cpp  rightParenToken.h  token.h
labOOP_3/labOOP_3/ui/: mainWindow.cpp  mainWindow.h  mainWindow.ui
